--- a/app/src/main/res/layout/activity_image_display.xml
+++ b/app/src/main/res/layout/activity_image_display.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ImageDisplayActivity">
+    tools:context=".activities.ImageDisplayActivity">
 
     <ImageView
         android:id="@+id/cameraImage"
