--- a/app/src/main/res/layout/activity_meaning.xml
+++ b/app/src/main/res/layout/activity_meaning.xml
@@ -179,7 +179,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/wikiTitleText">
 
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/card"
+                    android:id="@+id/frontendCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
