--- a/app/src/main/res/layout/custom_recycler_item.xml
+++ b/app/src/main/res/layout/custom_recycler_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_margin="8dp"
     android:layout_height="50dp">
 
     <TextView
@@ -10,6 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="TextView"
+        android:fontFamily="@font/apercu_pro_regular"
+        android:gravity="center"
+        android:padding="8dp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
