image display activity done

--- a/app/src/main/res/layout/activity_image_display.xml
+++ b/app/src/main/res/layout/activity_image_display.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/app_theme_color"
     tools:context=".activities.ImageDisplayActivity">
 
     <ImageView
@@ -20,11 +20,12 @@
         android:id="@+id/textView2"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="16dp"
         android:text="SELECTED TEXT"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/selectedWord"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cameraImage"
         app:layout_constraintVertical_chainStyle="packed" />
@@ -33,11 +34,10 @@
         android:id="@+id/selectedWord"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:text="Hello"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/arButton"
+        android:text="Select a word from the above image"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/findMeaningButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -46,32 +46,37 @@
 
     <Button
         android:id="@+id/findMeaningButton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="4dp"
-        android:backgroundTint="@color/purple_500"
+        style="@style/Widget.Material3.Button.Icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#FF7E1D"
         android:text="FIND MEANING"
         android:textColor="@color/white"
+        app:icon="@drawable/ic_baseline_book_24"
+        app:iconTint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/arButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cameraImage"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@+id/selectedWord" />
 
     <Button
         android:id="@+id/arButton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        style="@style/Widget.Material3.Button.Icon"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:backgroundTint="@color/purple_500"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FF7E1D"
         android:enabled="true"
         android:text="AR MODEL"
         android:textColor="@color/white"
+        app:icon="@drawable/ic_baseline_camera_alt_24"
+        app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/findMeaningButton"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/findMeaningButton"
         app:layout_constraintTop_toBottomOf="@+id/findMeaningButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
